# game-1a2b

./: Cargo.toml  README.md
.github/workflows/: CI.yml
Language/: game-1a2b.pot  game-1a2b.zh_CN.po  game-1a2b.zh_TW.po
src/: game.rs  i18n.rs  main.rs
